// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetails.ui should render 1`] = `
<React.Fragment>
  <SceneWrapper
    bodySplit={33.709859154929575}
  >
    <Connect(GradientComponent)
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <ScrollViewMock>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "width": "100%",
            }
          }
        >
          <Connect(TileComponent)
            onPress={[Function]}
            title="Sender Name"
            type="editable"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "thumb/nail/path",
                  }
                }
                style={
                  Object {
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 9,
                    "width": 40,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                Sender
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            body="₿ 0.00000123"
            title="Bitcoin Amount"
            type="static"
          />
          <Connect(TileComponent)
            onPress={[Function]}
            title="Amount in iso:USD"
            type="editable"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                $ 
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                0.00
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            title="Amount at Current Price"
            type="static"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                $ 
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "flex": 1,
                    "fontSize": 22,
                  }
                }
              >
                120.00
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#66EDA8",
                    "fontSize": 22,
                  }
                }
              >
                0
                %
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            onPress={[Function]}
            title="Category"
            type="editable"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderColor": "#66EDA8",
                    "borderRadius": 3,
                    "borderWidth": 1,
                    "marginVertical": 7,
                    "paddingHorizontal": 11,
                    "paddingVertical": 7,
                  }
                }
              >
                <FormattedText
                  style={
                    Object {
                      "color": "#66EDA8",
                      "fontSize": 20,
                    }
                  }
                >
                  Income
                </FormattedText>
              </View>
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "marginHorizontal": 16,
                    "marginVertical": 7,
                  }
                }
              >
                
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            body=""
            onPress={[Function]}
            title="Notes"
            type="editable"
          />
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <FormattedText
              style={
                Object {
                  "color": "#66EDA8",
                  "fontSize": 20,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "marginVertical": 29,
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              View Advanced Transaction Data
            </FormattedText>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingBottom": 22,
                "width": "100%",
              }
            }
          >
            <PrimaryButton2
              onPress={[Function]}
              style={
                Object {
                  "borderRadius": 34,
                  "height": 67,
                  "width": "80%",
                }
              }
            >
              <Text>
                Save
              </Text>
            </PrimaryButton2>
          </View>
        </View>
      </ScrollViewMock>
    </Connect(GradientComponent)>
  </SceneWrapper>
</React.Fragment>
`;

exports[`TransactionDetails.ui should render with negative nativeAmount and fiatAmount 1`] = `
<React.Fragment>
  <SceneWrapper
    bodySplit={33.709859154929575}
  >
    <Connect(GradientComponent)
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <ScrollViewMock>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "width": "100%",
            }
          }
        >
          <Connect(TileComponent)
            onPress={[Function]}
            title="Recipient Name"
            type="editable"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "thumb/nail/path",
                  }
                }
                style={
                  Object {
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 9,
                    "width": 40,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                Recipient
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            body="₿ 0.00000122 (+ 0 fee)"
            title="Bitcoin Amount"
            type="static"
          />
          <Connect(TileComponent)
            onPress={[Function]}
            title="Amount in iso:USD"
            type="editable"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                $ 
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                6392.93
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            title="Amount at Current Price"
            type="static"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                $ 
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "flex": 1,
                    "fontSize": 22,
                  }
                }
              >
                120.00
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#E85466",
                    "fontSize": 22,
                  }
                }
              >
                - 98.12
                %
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            onPress={[Function]}
            title="Category"
            type="editable"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderColor": "#66EDA8",
                    "borderRadius": 3,
                    "borderWidth": 1,
                    "marginVertical": 7,
                    "paddingHorizontal": 11,
                    "paddingVertical": 7,
                  }
                }
              >
                <FormattedText
                  style={
                    Object {
                      "color": "#66EDA8",
                      "fontSize": 20,
                    }
                  }
                >
                  Expense
                </FormattedText>
              </View>
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "marginHorizontal": 16,
                    "marginVertical": 7,
                  }
                }
              >
                
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            body=""
            onPress={[Function]}
            title="Notes"
            type="editable"
          />
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <FormattedText
              style={
                Object {
                  "color": "#66EDA8",
                  "fontSize": 20,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "marginVertical": 29,
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              View Advanced Transaction Data
            </FormattedText>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingBottom": 22,
                "width": "100%",
              }
            }
          >
            <PrimaryButton2
              onPress={[Function]}
              style={
                Object {
                  "borderRadius": 34,
                  "height": 67,
                  "width": "80%",
                }
              }
            >
              <Text>
                Save
              </Text>
            </PrimaryButton2>
          </View>
        </View>
      </ScrollViewMock>
    </Connect(GradientComponent)>
  </SceneWrapper>
</React.Fragment>
`;

exports[`TransactionDetails.ui should render with tx date off by 1000x in future 1`] = `
<React.Fragment>
  <SceneWrapper
    bodySplit={33.709859154929575}
  >
    <Connect(GradientComponent)
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <ScrollViewMock>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "width": "100%",
            }
          }
        >
          <Connect(TileComponent)
            onPress={[Function]}
            title="Sender Name"
            type="editable"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "thumb/nail/path",
                  }
                }
                style={
                  Object {
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 9,
                    "width": 40,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                Sender
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            body="₿ 0.00000123"
            title="Bitcoin Amount"
            type="static"
          />
          <Connect(TileComponent)
            onPress={[Function]}
            title="Amount in iso:USD"
            type="editable"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                $ 
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                0.00
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            title="Amount at Current Price"
            type="static"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                $ 
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "flex": 1,
                    "fontSize": 22,
                  }
                }
              >
                120.00
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#66EDA8",
                    "fontSize": 22,
                  }
                }
              >
                0
                %
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            onPress={[Function]}
            title="Category"
            type="editable"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderColor": "#66EDA8",
                    "borderRadius": 3,
                    "borderWidth": 1,
                    "marginVertical": 7,
                    "paddingHorizontal": 11,
                    "paddingVertical": 7,
                  }
                }
              >
                <FormattedText
                  style={
                    Object {
                      "color": "#66EDA8",
                      "fontSize": 20,
                    }
                  }
                >
                  Income
                </FormattedText>
              </View>
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "marginHorizontal": 16,
                    "marginVertical": 7,
                  }
                }
              >
                
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            body=""
            onPress={[Function]}
            title="Notes"
            type="editable"
          />
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <FormattedText
              style={
                Object {
                  "color": "#66EDA8",
                  "fontSize": 20,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "marginVertical": 29,
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              View Advanced Transaction Data
            </FormattedText>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingBottom": 22,
                "width": "100%",
              }
            }
          >
            <PrimaryButton2
              onPress={[Function]}
              style={
                Object {
                  "borderRadius": 34,
                  "height": 67,
                  "width": "80%",
                }
              }
            >
              <Text>
                Save
              </Text>
            </PrimaryButton2>
          </View>
        </View>
      </ScrollViewMock>
    </Connect(GradientComponent)>
  </SceneWrapper>
</React.Fragment>
`;

exports[`TransactionDetails.ui should render with tx date off by 1000x in past 1`] = `
<React.Fragment>
  <SceneWrapper
    bodySplit={33.709859154929575}
  >
    <Connect(GradientComponent)
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <ScrollViewMock>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "width": "100%",
            }
          }
        >
          <Connect(TileComponent)
            onPress={[Function]}
            title="Sender Name"
            type="editable"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "thumb/nail/path",
                  }
                }
                style={
                  Object {
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 9,
                    "width": 40,
                  }
                }
              />
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                Sender
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            body="₿ 0.00000123"
            title="Bitcoin Amount"
            type="static"
          />
          <Connect(TileComponent)
            onPress={[Function]}
            title="Amount in iso:USD"
            type="editable"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                $ 
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                0.00
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            title="Amount at Current Price"
            type="static"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 22,
                  }
                }
              >
                $ 
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "flex": 1,
                    "fontSize": 22,
                  }
                }
              >
                120.00
              </FormattedText>
              <FormattedText
                style={
                  Object {
                    "color": "#66EDA8",
                    "fontSize": 22,
                  }
                }
              >
                0
                %
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            onPress={[Function]}
            title="Category"
            type="editable"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "margin": 6,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderColor": "#66EDA8",
                    "borderRadius": 3,
                    "borderWidth": 1,
                    "marginVertical": 7,
                    "paddingHorizontal": 11,
                    "paddingVertical": 7,
                  }
                }
              >
                <FormattedText
                  style={
                    Object {
                      "color": "#66EDA8",
                      "fontSize": 20,
                    }
                  }
                >
                  Income
                </FormattedText>
              </View>
              <FormattedText
                style={
                  Object {
                    "color": "#FFFFFF",
                    "marginHorizontal": 16,
                    "marginVertical": 7,
                  }
                }
              >
                
              </FormattedText>
            </View>
          </Connect(TileComponent)>
          <Connect(TileComponent)
            body=""
            onPress={[Function]}
            title="Notes"
            type="editable"
          />
          <TouchableWithoutFeedback
            onPress={[Function]}
          >
            <FormattedText
              style={
                Object {
                  "color": "#66EDA8",
                  "fontSize": 20,
                  "marginLeft": "auto",
                  "marginRight": "auto",
                  "marginVertical": 29,
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              View Advanced Transaction Data
            </FormattedText>
          </TouchableWithoutFeedback>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingBottom": 22,
                "width": "100%",
              }
            }
          >
            <PrimaryButton2
              onPress={[Function]}
              style={
                Object {
                  "borderRadius": 34,
                  "height": 67,
                  "width": "80%",
                }
              }
            >
              <Text>
                Save
              </Text>
            </PrimaryButton2>
          </View>
        </View>
      </ScrollViewMock>
    </Connect(GradientComponent)>
  </SceneWrapper>
</React.Fragment>
`;
